tests/syntax_error/double_5point.jou
def foo() -> None:
    x = 5.   # Error: invalid number or variable name "5."
